# puzzles

./: .gitignore  pyproject.toml
src/puzzles/: __init__.py  chess_utils.py  cli.py  nqueens.py  visualize.py
tests/: test_nqueens.py
